--- a/freeagt.html
+++ b/freeagt.html
@@ -1,32 +1,33 @@
 <table border=0 cellspacing=0 cellpadding=2 width=100><tr>
 <td bgcolor=#802080 valign=center height=3 nowrap rowspan=2 width=705>
-<b><font size=6 color='white'><center>2018 Free Agent Leaderboard<br>(Through week 11)</font></b>&nbsp;&nbsp;</td></tr>
+<b><font size=6 color='white'><center>2018 Free Agent Leaderboard<br>(Through week 12)</font></b>&nbsp;&nbsp;</td></tr>
 </table>
 <table cellspacing=1><tr><td valign=top>
 <table width=260 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=3><font size=5 color='yellow'><center>Quarterbacks</td></tr>
-<tr><td><font size=3>1)</td><td><font size=3>Blake Bortles          </td><td><font size=3>1190</td></tr>
-<tr><td><font size=3>2)</td><td><font size=3>Case Keenum            </td><td><font size=3>1150</td></tr>
-<tr><td><font size=3>3)</td><td><font size=3>Dak Prescott           </td><td><font size=3>1100</td></tr>
-<tr><td><font size=3>4)</td><td><font size=3>Derek Carr             </td><td><font size=3>1050</td></tr>
-<tr><td><font size=3>5)</td><td><font size=3>Eli Manning            </td><td><font size=3> 985</td></tr>
-<tr><td><font size=3>6)</td><td><font size=3>Joe Flacco             </td><td><font size=3> 915</td></tr>
-<tr><td><font size=3>7)</td><td><font size=3>Marcus Mariota         </td><td><font size=3> 655</td></tr>
-<tr><td><font size=3>8)</td><td><font size=3>Ryan Tannehill         </td><td><font size=3> 650</td></tr>
-<tr><td><font size=3>9)</td><td><font size=3>Brock Osweiler         </td><td><font size=3> 515</td></tr>
-<tr><td><font size=3>10)</td><td><font size=3>Tyrod Taylor           </td><td><font size=3> 395</td></tr>
-<tr><td><font size=3>11)</td><td><font size=3>Nick Mullens           </td><td><font size=3> 250</td></tr>
-<tr><td><font size=3>12)</td><td><font size=3>Sam Bradford           </td><td><font size=3> 150</td></tr>
-<tr><td><font size=3>13)</td><td><font size=3>Jeff Driskell          </td><td><font size=3> 150</td></tr>
+<tr><td><font size=3>1)</td><td><font size=3>Blake Bortles          </td><td><font size=3>1240</td></tr>
+<tr><td><font size=3>2)</td><td><font size=3>Case Keenum            </td><td><font size=3>1225</td></tr>
+<tr><td><font size=3>3)</td><td><font size=3>Derek Carr             </td><td><font size=3>1100</td></tr>
+<tr><td><font size=3>4)</td><td><font size=3>Eli Manning            </td><td><font size=3>1080</td></tr>
+<tr><td><font size=3>5)</td><td><font size=3>Joe Flacco             </td><td><font size=3> 915</td></tr>
+<tr><td><font size=3>6)</td><td><font size=3>Marcus Mariota         </td><td><font size=3> 905</td></tr>
+<tr><td><font size=3>7)</td><td><font size=3>Ryan Tannehill         </td><td><font size=3> 850</td></tr>
+<tr><td><font size=3>8)</td><td><font size=3>Brock Osweiler         </td><td><font size=3> 515</td></tr>
+<tr><td><font size=3>9)</td><td><font size=3>Tyrod Taylor           </td><td><font size=3> 395</td></tr>
+<tr><td><font size=3>10)</td><td><font size=3>Nick Mullens           </td><td><font size=3> 330</td></tr>
+<tr><td><font size=3>11)</td><td><font size=3>Jeff Driskell          </td><td><font size=3> 275</td></tr>
+<tr><td><font size=3>12)</td><td><font size=3>Colt McCoy             </td><td><font size=3> 240</td></tr>
+<tr><td><font size=3>13)</td><td><font size=3>Sam Bradford           </td><td><font size=3> 150</td></tr>
 <tr><td><font size=3>14)</td><td><font size=3>Matt Barkley           </td><td><font size=3> 130</td></tr>
-<tr><td><font size=3>15)</td><td><font size=3>Nathan Peterman        </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>15)</td><td><font size=3>Chase Daniel           </td><td><font size=3> 130</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Running Backs</td></tr>
+<tr><td><font size=3>LeGarrette Blount      </td><td><font size=3> 315</td></tr>
 <tr><td><font size=3>Bilal Powell           </td><td><font size=3> 270</td></tr>
-<tr><td><font size=3>Kapri Bibbs            </td><td><font size=3> 200</td></tr>
-<tr><td><font size=3>LeGarrette Blount      </td><td><font size=3> 175</td></tr>
+<tr><td><font size=3>Kapri Bibbs            </td><td><font size=3> 250</td></tr>
+<tr><td><font size=3>Doug Martin            </td><td><font size=3> 165</td></tr>
 <tr><td><font size=3>Devontae Booker        </td><td><font size=3> 160</td></tr>
 <tr><td><font size=3>Kyle Juszczyk          </td><td><font size=3> 160</td></tr>
 <tr><td><font size=3>Jalen Richard          </td><td><font size=3> 155</td></tr>
@@ -34,11 +35,10 @@
 <tr><td><font size=3>Alfred Morris          </td><td><font size=3> 110</td></tr>
 <tr><td><font size=3>Spencer Ware           </td><td><font size=3> 105</td></tr>
 <tr><td><font size=3>Alex Armah             </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>Ty Montgomery          </td><td><font size=3> 100</td></tr>
 <tr><td><font size=3>Anthony Sherman        </td><td><font size=3> 100</td></tr>
 <tr><td><font size=3>Alfred Blue            </td><td><font size=3>  85</td></tr>
-<tr><td><font size=3>Ty Montgomery          </td><td><font size=3>  75</td></tr>
-<tr><td><font size=3>Marcus Murphy          </td><td><font size=3>  55</td></tr>
-<tr><td><font size=3>James Develin          </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>Taquan Mizzell         </td><td><font size=3>  75</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
@@ -46,74 +46,74 @@
 <tr><td><font size=3>DeSean Jackson         </td><td><font size=3> 855</td></tr>
 <tr><td><font size=3>Jakeem Grant           </td><td><font size=3> 635</td></tr>
 <tr><td><font size=3>Tyrell Williams        </td><td><font size=3> 615</td></tr>
-<tr><td><font size=3>Curtis Samuel          </td><td><font size=3> 525</td></tr>
+<tr><td><font size=3>Curtis Samuel          </td><td><font size=3> 600</td></tr>
+<tr><td><font size=3>Will Fuller            </td><td><font size=3> 545</td></tr>
+<tr><td><font size=3>Dede Westbrook         </td><td><font size=3> 530</td></tr>
+<tr><td><font size=3>David Moore            </td><td><font size=3> 520</td></tr>
 <tr><td><font size=3>Donte Moncrief         </td><td><font size=3> 490</td></tr>
 <tr><td><font size=3>Cordarrelle Patterson  </td><td><font size=3> 480</td></tr>
 <tr><td><font size=3>Chris Godwin           </td><td><font size=3> 465</td></tr>
-<tr><td><font size=3>Dede Westbrook         </td><td><font size=3> 455</td></tr>
 <tr><td><font size=3>Kenny Stills           </td><td><font size=3> 435</td></tr>
-<tr><td><font size=3>Adam Humphries         </td><td><font size=3> 395</td></tr>
-<tr><td><font size=3>Mohamed Sanu           </td><td><font size=3> 395</td></tr>
-<tr><td><font size=3>David Moore            </td><td><font size=3> 370</td></tr>
+<tr><td><font size=3>Mohamed Sanu           </td><td><font size=3> 430</td></tr>
+<tr><td><font size=3>John Ross              </td><td><font size=3> 375</td></tr>
 <tr><td><font size=3>Sterling Shepard       </td><td><font size=3> 370</td></tr>
-<tr><td><font size=3>Geronimo Allison       </td><td><font size=3> 360</td></tr>
-<tr><td><font size=3>Aldrick Robinson       </td><td><font size=3> 325</td></tr>
+<tr><td><font size=3>Michael Crabtree       </td><td><font size=3> 360</td></tr>
 </table>
 </td></tr><tr><td valign=top>
 <table width=260 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=3><font size=5 color='yellow'><center>Tight Ends</td></tr>
-<tr><td><font size=3>1)</td><td><font size=3>Jesse James            </td><td><font size=3> 295</td></tr>
-<tr><td><font size=3>2)</td><td><font size=3>Gerald Everett         </td><td><font size=3> 280</td></tr>
-<tr><td><font size=3>3)</td><td><font size=3>Michael Roberts        </td><td><font size=3> 200</td></tr>
-<tr><td><font size=3>4)</td><td><font size=3>Erik Swoope            </td><td><font size=3> 200</td></tr>
-<tr><td><font size=3>5)</td><td><font size=3>Jeff Heuerman          </td><td><font size=3> 190</td></tr>
-<tr><td><font size=3>6)</td><td><font size=3>Benjamin Watson        </td><td><font size=3> 190</td></tr>
-<tr><td><font size=3>7)</td><td><font size=3>Ed Dickson             </td><td><font size=3> 175</td></tr>
-<tr><td><font size=3>8)</td><td><font size=3>Demetrius Harris       </td><td><font size=3> 175</td></tr>
-<tr><td><font size=3>9)</td><td><font size=3>Nick Vannett           </td><td><font size=3> 175</td></tr>
-<tr><td><font size=3>10)</td><td><font size=3>Antonio Gates          </td><td><font size=3> 170</td></tr>
-<tr><td><font size=3>11)</td><td><font size=3>Vernon Davis           </td><td><font size=3> 165</td></tr>
-<tr><td><font size=3>12)</td><td><font size=3>Tyler Higbee           </td><td><font size=3> 155</td></tr>
-<tr><td><font size=3>13)</td><td><font size=3>Mo Alie-Cox            </td><td><font size=3> 150</td></tr>
-<tr><td><font size=3>14)</td><td><font size=3>Jason Croom            </td><td><font size=3> 150</td></tr>
-<tr><td><font size=3>15)</td><td><font size=3>Robert Tonyan          </td><td><font size=3> 150</td></tr>
+<tr><td><font size=3>1)</td><td><font size=3>Vernon Davis           </td><td><font size=3> 325</td></tr>
+<tr><td><font size=3>2)</td><td><font size=3>Jesse James            </td><td><font size=3> 295</td></tr>
+<tr><td><font size=3>3)</td><td><font size=3>Gerald Everett         </td><td><font size=3> 280</td></tr>
+<tr><td><font size=3>4)</td><td><font size=3>Jonnu Smith            </td><td><font size=3> 280</td></tr>
+<tr><td><font size=3>5)</td><td><font size=3>Darren Fells           </td><td><font size=3> 200</td></tr>
+<tr><td><font size=3>6)</td><td><font size=3>Michael Roberts        </td><td><font size=3> 200</td></tr>
+<tr><td><font size=3>7)</td><td><font size=3>Erik Swoope            </td><td><font size=3> 200</td></tr>
+<tr><td><font size=3>8)</td><td><font size=3>Jeff Heuerman          </td><td><font size=3> 190</td></tr>
+<tr><td><font size=3>9)</td><td><font size=3>Benjamin Watson        </td><td><font size=3> 190</td></tr>
+<tr><td><font size=3>10)</td><td><font size=3>Ed Dickson             </td><td><font size=3> 175</td></tr>
+<tr><td><font size=3>11)</td><td><font size=3>Demetrius Harris       </td><td><font size=3> 175</td></tr>
+<tr><td><font size=3>12)</td><td><font size=3>Nick Vannett           </td><td><font size=3> 175</td></tr>
+<tr><td><font size=3>13)</td><td><font size=3>Antonio Gates          </td><td><font size=3> 170</td></tr>
+<tr><td><font size=3>14)</td><td><font size=3>Tyler Higbee           </td><td><font size=3> 155</td></tr>
+<tr><td><font size=3>15)</td><td><font size=3>Mo Alie-Cox            </td><td><font size=3> 150</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Kickers</td></tr>
-<tr><td><font size=3>Jason Myers            </td><td><font size=3> 930</td></tr>
-<tr><td><font size=3>Ka'imi Fairbairn       </td><td><font size=3> 825</td></tr>
-<tr><td><font size=3>Ryan Succop            </td><td><font size=3> 750</td></tr>
-<tr><td><font size=3>Aldrick Rosas          </td><td><font size=3> 740</td></tr>
-<tr><td><font size=3>Cody Parkey            </td><td><font size=3> 725</td></tr>
-<tr><td><font size=3>Steven Hauschka        </td><td><font size=3> 710</td></tr>
-<tr><td><font size=3>Sebastian Janikowski   </td><td><font size=3> 665</td></tr>
-<tr><td><font size=3>Matt Bryant            </td><td><font size=3> 640</td></tr>
-<tr><td><font size=3>Adam Vinatieri         </td><td><font size=3> 625</td></tr>
-<tr><td><font size=3>Randy Bullock          </td><td><font size=3> 470</td></tr>
+<tr><td><font size=3>Jason Myers            </td><td><font size=3>1025</td></tr>
+<tr><td><font size=3>Ka'imi Fairbairn       </td><td><font size=3> 935</td></tr>
+<tr><td><font size=3>Aldrick Rosas          </td><td><font size=3> 845</td></tr>
+<tr><td><font size=3>Ryan Succop            </td><td><font size=3> 790</td></tr>
+<tr><td><font size=3>Cody Parkey            </td><td><font size=3> 780</td></tr>
+<tr><td><font size=3>Sebastian Janikowski   </td><td><font size=3> 770</td></tr>
+<tr><td><font size=3>Steven Hauschka        </td><td><font size=3> 745</td></tr>
+<tr><td><font size=3>Adam Vinatieri         </td><td><font size=3> 715</td></tr>
+<tr><td><font size=3>Matt Bryant            </td><td><font size=3> 680</td></tr>
+<tr><td><font size=3>Chris Boswell          </td><td><font size=3> 490</td></tr>
+<tr><td><font size=3>Randy Bullock          </td><td><font size=3> 480</td></tr>
 <tr><td><font size=3>Chandler Catanzaro     </td><td><font size=3> 445</td></tr>
-<tr><td><font size=3>Chris Boswell          </td><td><font size=3> 410</td></tr>
 <tr><td><font size=3>Caleb Sturgis          </td><td><font size=3> 320</td></tr>
 <tr><td><font size=3>Giorgio Tavecchio      </td><td><font size=3> 270</td></tr>
-<tr><td><font size=3>Mike Nugent            </td><td><font size=3> 230</td></tr>
+<tr><td><font size=3>Cairo Santos           </td><td><font size=3> 260</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Rookies</td></tr>
 <tr><td><font size=3>Dallas Goedert         </td><td><font size=3> 260</td></tr>
+<tr><td><font size=3>Dante Pettis           </td><td><font size=3> 240</td></tr>
 <tr><td><font size=3>Jordan Thomas          </td><td><font size=3> 225</td></tr>
+<tr><td><font size=3>Robert Foster          </td><td><font size=3> 220</td></tr>
+<tr><td><font size=3>Mark Andrews           </td><td><font size=3> 210</td></tr>
 <tr><td><font size=3>Matt McCrane           </td><td><font size=3> 190</td></tr>
-<tr><td><font size=3>Mark Andrews           </td><td><font size=3> 175</td></tr>
-<tr><td><font size=3>Gus Edwards            </td><td><font size=3> 165</td></tr>
 <tr><td><font size=3>Keke Coutee            </td><td><font size=3> 160</td></tr>
 <tr><td><font size=3>Dane Cruikshank        </td><td><font size=3> 155</td></tr>
 <tr><td><font size=3>Jordan Wilkins         </td><td><font size=3> 155</td></tr>
-<tr><td><font size=3>Dante Pettis           </td><td><font size=3> 130</td></tr>
+<tr><td><font size=3>Trey Quinn             </td><td><font size=3>  75</td></tr>
 <tr><td><font size=3>James Washington       </td><td><font size=3>  75</td></tr>
-<tr><td><font size=3>Robert Foster          </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>Equanimeous St Brown   </td><td><font size=3>  65</td></tr>
+<tr><td><font size=3>Keith Kirkwood         </td><td><font size=3>  50</td></tr>
 <tr><td><font size=3>Damion Ratley          </td><td><font size=3>  40</td></tr>
-<tr><td><font size=3>Equanimeous St Brown   </td><td><font size=3>  40</td></tr>
 <tr><td><font size=3>Deontay Burnett        </td><td><font size=3>  30</td></tr>
-<tr><td><font size=3>Trenton Cannon         </td><td><font size=3>  30</td></tr>
 </table>
 </td></tr></table>
